# Fluent

./: LICENSE  README.md
Fluent/: ContentView.swift  EnvironmentObjects.swift  FluentApp.swift  Localization.swift
Fluent-iOS/Fluent/: ContentView.swift  EnvironmentObjects.swift  Info.plist
Fluent-iOS/Fluent.xcodeproj/: project.pbxproj
Fluent-iOS/Fluent.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Fluent-iOS/Fluent/Assets.xcassets/AccentColor.colorset/: Contents.json
Fluent-iOS/Fluent/Assets.xcassets/FourthColor.colorset/: Contents.json
Fluent-iOS/Fluent/Assets.xcassets/LightGray.colorset/: Contents.json
Fluent-iOS/Fluent/Assets.xcassets/SecondColor.colorset/: Contents.json
Fluent-iOS/Fluent/Assets.xcassets/VeryLightGray.colorset/: Contents.json
Fluent-iOS/Fluent/Model/: ExerciseModel.swift
Fluent-iOS/Fluent/Network/: Network.swift  ParseExercises.swift  fluent.grpc.swift  fluent.pb.swift
Fluent-iOS/Fluent/Views/: ComingSoonView.swift  LessonView.swift  LoginView.swift
Fluent-iOS/Fluent/Views/Account/: AccountView.swift  SettingsView.swift  UserLanguagesView.swift
Fluent-iOS/Fluent/Views/Course/: CourseView.swift
Fluent-iOS/Fluent/Views/Entertainment/: EntertainmentView.swift
Fluent-iOS/Fluent/Views/Exercise/: AloneExerciseViews.swift  CrosswordView.swift  ExercisesView.swift  LearningView.swift  ReadingExerciseView.swift  SpeakingView.swift  WordCardsView.swift  WordInsertionExerciseView.swift  WordInsertionsWithAnswersView.swift
Fluent-iOS/FluentUITests/: FluentUITests.swift
Fluent-server/: CMakeLists.txt  Dockerfile  fluent.proto
Fluent-server/include/: database.hpp  doctest.h  server.hpp
Fluent-server/src/: database.cpp  databaseSetup.cpp  databaseTest.cpp  main.cpp  server.cpp
Fluent.xcodeproj/: project.pbxproj
Fluent/Assets.xcassets/AccentColor.colorset/: Contents.json
Fluent/Assets.xcassets/CourseButton.imageset/: Contents.json
Fluent/Assets.xcassets/FifthColor.colorset/: Contents.json
Fluent/Assets.xcassets/FontColor.colorset/: Contents.json
Fluent/Model/: ExerciseModel.swift
Fluent/Views/: ComingSoonView.swift  LessonView.swift
Fluent/Views/Account/: AccountView.swift  SettingsView.swift  UserLanguagesView.swift
Fluent/Views/Course/: CourseView.swift
Fluent/Views/Entertainment/: EntertainmentView.swift
Fluent/Views/Exercise/: AloneExerciseViews.swift  CrosswordView.swift  ExercisesView.swift  LearningView.swift  ReadingExerciseView.swift  SpeakingView.swift  WordCardsView.swift  WordInsertionExerciseView.swift  WordInsertionsWithAnswersView.swift
FluentTests/: FluentTests.swift
FluentUITests/: FluentUITestsLaunchTests.swift
(+1 files in other folders)
